# academia.si

./: .gitignore  README.md
2025/Programiranje1/: 128Nalog.cpp  CMakeLists.txt  constants.h  srecanje2.cpp  srecanje3.cpp  srecanje4.cpp  srecanje5.cpp  srecanje6.cpp  srecanje7.cpp
2025/Programiranje1/GuiTest1/: CMakeLists.txt  loginmanager.cpp  loginmanager.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  passwordchange.cpp  passwordchange.h  passwordchange.ui
2025/Programiranje1/Primer1/: AppException.cpp  AppException.h  CsvFormatException.cpp  CsvFormatException.h  CsvReader.cpp  CsvReader.h  FileOpenException.cpp  FileOpenException.h  InvalidFieldException.cpp  InvalidFieldException.h  Student.cpp  Student.h  main.cpp
2025/Programiranje1/TestiranjeS_QT/: CMakeLists.txt  parse.cpp  parse.h  record.h  tst_primer1.cpp
2025/Programiranje2/: AVL-tree.cpp  CMakeLists.txt  constants.h  nacrtovalski_vzorci.cpp  napredno.cpp  prim_dijkstra.cpp  prims_algorithm.cpp  solid.cpp  solid_slab_primer.cpp  srecanje1.cpp  srecanje1_naloge.cpp  srecanje2.cpp  srecanje3.cpp  srecanje3_naloge.cpp  srecanje4.cpp  srecanje4_naloge.cpp  srecanje5_naloge.cpp
